Fix cross-dc security manager usage. Port some Lucene test setup (#3285)