@@ -113,6 +113,13 @@ allprojects {
 
       jvmArgs Commandline.translateCommandline(resolvedTestOption("tests.jvmargs"))
 
+      // Enable the vector incubator module on supported Java versions:
+      if (rootProject.vectorIncubatorJavaVersions.contains(rootProject.runtimeJavaVersion)) {
+        jvmArgs '--add-modules', 'jdk.incubator.vector'
+      }
+
+      jvmArgs '--enable-native-access=ALL-UNNAMED'
+
       def loggingConfigFile = layout.projectDirectory.file("${resources}/logging.properties")
       def tempDir = layout.projectDirectory.dir(testsTmpDir.toString())
       jvmArgumentProviders.add(
